--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "scripts": {
+    "build": "tsc -p tsconfig.json"
+  },
   "devDependencies": {
+    "typescript": "4.0.5",
     "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types"
   }
 }
