--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ test:
 build:
   stage: build
   script:
-    - npm i
+    - npm install typescript@4.0.5
     - npm run build
     - zip wfrp4-enhanced-drag-n-drop-items.zip -r dist/*.* -x ".*"
   artifacts:
