--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,8 @@ test:
 
 build:
   stage: build
+  before_script:
+    - npm install -g typescript@4.0.5
   script:
     - npm ci --only=prod
     - npm run build
