--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,3 +44,5 @@ deploy:
     - git add dist/wfrp4-enhanced-drag-n-drop-items.zip
     - git commit -f -m "push artifact on dist branch"
     - git push
+  only:
+    - master
