--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ build:
 deploy:
   stage: deploy
   script:
+    - git fetch
     - git checkout dist
     - git add dist/wfrp4-enhanced-drag-n-drop-items.zip
     - git commit -f -m "push artifact on dist branch"
