--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ build:
     - npm run build
     - cp module.json dist
     - cd dist
-    - zip wfrp4-enhanced-drag-n-drop-items.zip -r *.* -x ".*"
+    - zip wfrp4-enhanced-drag-n-drop-items.zip -r *.* src -x ".*"
   artifacts:
     name: wfrp4-enhanced-drag-n-drop-items
     when: on_success
